--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ readme = "README.md"
 base64 = "0.12.2"
 chrono = "0.4.11"
 opentelemetry = "0.6.0"
-reqwest = { version = "0.10.6", features = ["blocking", "json"] }
 serde = { version = "1.0.113", features = ["derive"] }
+serde_json = "1.0.55"
+ureq = { version = "1.2.0", features = ["json"] }
 
 [dev-dependencies]
-opentelemetry-jaeger = "0.5.0"
-tokio = { version = "0.2.21", features = ["macros", "process"] }
+tokio = { version = "0.2.21", features = ["macros", "process", "time"] }
 tracing = "0.1.15"
 tracing-attributes = "0.1.8"
 tracing-futures = "0.2.4"
