--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,15 @@ version = "0.1.0"
 authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
 edition = "2018"
 description = "OpenTelemetry exporter for Azure Application Insights"
-repository = "https://github.com/frigus02/opentelemetry-application-insights"
-keywords = ["opentelemetry", "application insights", "tracing", "metrics"]
-license = "MIT"
 readme = "README.md"
+repository = "https://github.com/frigus02/opentelemetry-application-insights"
+license = "MIT"
+keywords = ["opentelemetry", "application insights", "tracing"]
+categories = [
+    "development-tools::debugging",
+    "development-tools::profiling",
+    "asynchronous",
+]
 
 [dependencies]
 base64 = "0.12"
