--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ tracing-attributes = "0.1.8"
 tracing-futures = "0.2.4"
 tracing-opentelemetry = "0.5.0"
 tracing-subscriber = "0.2.6"
-
+version-sync = "0.9.0"
 
 [badges]
 github = { repository = "frigus02/opentelemetry-application-insights", workflow = "CI" }
