Exclude .github/ and README.tpl from cargo package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ categories = [
     "development-tools::profiling",
     "asynchronous",
 ]
+exclude = [
+    ".github/*",
+    "README.tpl",
+]
 
 [dependencies]
 base64 = "0.12"
