--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "OpenTelemetry exporter for Azure Application Insights"
 readme = "README.md"
 repository = "https://github.com/frigus02/opentelemetry-application-insights"
 license = "MIT"
-keywords = ["opentelemetry", "application insights", "tracing"]
+keywords = ["opentelemetry", "tracing"]
 categories = [
     "development-tools::debugging",
     "development-tools::profiling",
