--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ opentelemetry = "0.6"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 ureq = { version = "1.2", features = ["json"] }
+gethostname = "0.2.1"
 
 [dev-dependencies]
 env_logger = "0.7.1"
