--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,14 @@ exclude = [
 ]
 
 [dependencies]
+# async_std::stream::interval requires the "unstable" feature
+async-std = { version = "1.6", features = ["unstable"], optional = true }
 chrono = "0.4"
 log = "0.4"
 opentelemetry = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tokio = { version = "0.2", features = ["rt-core", "time", "stream"], optional = true }
 ureq = { version = "1.3", features = ["json"] }
 
 [dev-dependencies]
