--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { version = "0.2", features = ["rt-core", "time", "stream"], optional = 
 ureq = { version = "1.3", features = ["json"] }
 
 [dev-dependencies]
+backtrace = "0.3.50"
 env_logger = "0.7.1"
 test-case = "1.0.0"
 tokio = { version = "0.2.22", features = ["macros", "process", "time"] }
