--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,25 +19,23 @@ exclude = [
 ]
 
 [dependencies]
-# async_std::stream::interval requires the "unstable" feature
-async-std = { version = "1.6", features = ["unstable"], optional = true }
+async-trait = "0.1"
 chrono = "0.4"
 log = "0.4"
-opentelemetry = "0.8"
+opentelemetry = "0.9"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "0.2", features = ["rt-core", "time", "stream"], optional = true }
 ureq = { version = "1.3", features = ["json"] }
 
 [dev-dependencies]
 backtrace = "0.3.50"
 env_logger = "0.7.1"
 test-case = "1.0.0"
-tokio = { version = "0.2.22", features = ["macros", "process", "time"] }
+tokio = { version = "0.3.0", features = ["macros", "process", "rt-multi-thread", "time"] }
 tracing = "0.1.19"
 tracing-attributes = "0.1.10"
 tracing-futures = "0.2.4"
-tracing-opentelemetry = "0.7.0"
+tracing-opentelemetry = "0.8.0"
 tracing-subscriber = "0.2.11"
 version-sync = "0.9.1"
 
