--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,18 +18,28 @@ exclude = [
     "README.tpl",
 ]
 
+[features]
+default = []
+reqwest-blocking-client = ["reqwest", "reqwest/blocking"]
+reqwest-client = ["reqwest"]
+surf-client = ["surf"]
+
 [dependencies]
 async-trait = "0.1"
+bytes = "0.5"
 chrono = "0.4"
+http = "0.2"
 log = "0.4"
 opentelemetry = "0.9"
+reqwest = { version = "0.10", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-ureq = { version = "1.3", features = ["json"] }
+surf = { version = "2.0", optional = true }
 
 [dev-dependencies]
 backtrace = "0.3.50"
 env_logger = "0.7.1"
+opentelemetry-application-insights = { path = ".", features = ["reqwest-client"] }
 test-case = "1.0.0"
 tokio = { version = "0.3.0", features = ["macros", "process", "rt-multi-thread", "time"] }
 tracing = "0.1.19"
