--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ chrono = "0.4"
 http = "0.2"
 log = "0.4"
 opentelemetry = "0.9"
+opentelemetry-semantic-conventions = "0.1"
 reqwest = { version = "0.10", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
