--- a/examples/tracing/Cargo.toml
+++ b/examples/tracing/Cargo.toml
@@ -5,11 +5,12 @@ authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-opentelemetry = "0.8.0"
-opentelemetry-application-insights = "0.4.0"
-tokio = { version = "0.3.0", features = ["macros", "process", "rt-multi-thread", "time"] }
-tracing = "0.1.21"
+opentelemetry = { version = "0.10.0", features = ["tokio"] }
+opentelemetry-application-insights = { version = "0.6.0", features = ["reqwest-client"] }
+reqwest = "0.10.9"
+tokio = { version = "0.2.23", features = ["macros", "process", "rt-core", "time"] }
+tracing = "0.1.22"
 tracing-attributes = "0.1.11"
 tracing-futures = "0.2.4"
-tracing-opentelemetry = "0.8.0"
-tracing-subscriber = "0.2.13"
+tracing-opentelemetry = "0.9.0"
+tracing-subscriber = "0.2.15"
