--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ reqwest = { version = "0.10", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 surf = { version = "2.0", optional = true }
+once_cell = "1.5.2"
 
 [dev-dependencies]
 async-std = { version = "1.6.5", features = ["attributes"] }
