--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ async-trait = "0.1"
 bytes = "0.5"
 chrono = "0.4"
 http = "0.2"
-opentelemetry = "0.10"
-opentelemetry-semantic-conventions = "0.2"
+thiserror = "1"
+opentelemetry = "0.11"
+opentelemetry-semantic-conventions = "0.3"
 reqwest = { version = "0.10", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
