--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,30 +20,30 @@ exclude = [
 
 [features]
 reqwest-blocking-client = ["reqwest", "reqwest/blocking"]
-reqwest-client = ["reqwest", "opentelemetry/tokio"]
+reqwest-client = ["reqwest", "opentelemetry/tokio-support"]
 surf-client = ["surf"]
 
 [dependencies]
 async-trait = "0.1"
-bytes = "0.5"
+bytes = "1"
 chrono = "0.4"
 http = "0.2"
 thiserror = "1"
-opentelemetry = "0.11"
-opentelemetry-semantic-conventions = "0.3"
-reqwest = { version = "0.10", optional = true }
+opentelemetry = "0.12"
+opentelemetry-semantic-conventions = "0.4"
+reqwest = { version = "0.11", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-surf = { version = "2.0", optional = true }
+surf = { version = "2", optional = true }
 once_cell = "1"
 
 [dev-dependencies]
-async-std = { version = "1.6.5", features = ["attributes"] }
-backtrace = "0.3.50"
-env_logger = "0.8.1"
+async-std = { version = "1.9.0", features = ["attributes"] }
+backtrace = "0.3.56"
+env_logger = "0.8.2"
 opentelemetry-application-insights = { path = ".", features = ["reqwest-blocking-client"] }
-test-case = "1.0.0"
-tokio = { version = "0.2.22", features = ["macros", "process", "time"] }
+test-case = "1.1.0"
+tokio = { version = "1.0.2", features = ["rt", "macros", "process", "time"] }
 version-sync = "0.9.1"
 
 [package.metadata.docs.rs]
@@ -53,8 +53,16 @@ all-features = true
 github = { repository = "frigus02/opentelemetry-application-insights", workflow = "CI" }
 
 [[example]]
+name = "attributes"
+required-features = ["reqwest-blocking-client"]
+
+[[example]]
 name = "http_client_reqwest"
 required-features = ["reqwest-client"]
+
+[[example]]
+name = "http_client_reqwest_blocking"
+required-features = ["reqwest-blocking-client"]
 
 [[example]]
 name = "http_client_surf"
