--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ exclude = [
 [features]
 reqwest-blocking-client = ["reqwest", "reqwest/native-tls", "reqwest/blocking"]
 reqwest-blocking-client-rustls = ["reqwest", "reqwest/rustls-tls", "reqwest/blocking"]
-reqwest-client = ["reqwest", "reqwest/native-tls", "opentelemetry/tokio-support"]
-reqwest-client-rustls = ["reqwest", "reqwest/rustls-tls", "opentelemetry/tokio-support"]
+reqwest-client = ["reqwest", "reqwest/native-tls"]
+reqwest-client-rustls = ["reqwest", "reqwest/rustls-tls"]
 surf-client = ["surf"]
 
 [dependencies]
@@ -31,8 +31,8 @@ bytes = "1"
 chrono = "0.4"
 http = "0.2"
 thiserror = "1"
-opentelemetry = "0.12"
-opentelemetry-semantic-conventions = "0.4"
+opentelemetry = "0.13"
+opentelemetry-semantic-conventions = "0.5"
 reqwest = { version = "0.11", optional = true, default-features = false }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -42,11 +42,12 @@ once_cell = "1"
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
 backtrace = "0.3.56"
-env_logger = "0.8.2"
-opentelemetry-application-insights = { path = ".", features = ["reqwest-blocking-client"] }
+env_logger = "0.8.3"
+opentelemetry = { version = "0.13.0", features = ["rt-tokio"] }
+opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
 test-case = "1.1.0"
-tokio = { version = "1.0.2", features = ["rt", "macros", "process", "time"] }
-version-sync = "0.9.1"
+tokio = { version = "1.4.0", features = ["rt", "macros", "process", "time"] }
+version-sync = "0.9.2"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -60,7 +61,7 @@ required-features = ["reqwest-blocking-client"]
 
 [[example]]
 name = "http_client_reqwest"
-required-features = ["reqwest-client"]
+required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
 
 [[example]]
 name = "http_client_reqwest_blocking"
@@ -68,8 +69,8 @@ required-features = ["reqwest-blocking-client"]
 
 [[example]]
 name = "http_client_surf"
-required-features = ["surf-client", "opentelemetry/async-std"]
+required-features = ["surf-client", "opentelemetry/rt-async-std"]
 
 [[example]]
 name = "opentelemetry"
-required-features = ["reqwest-client"]
+required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
