--- a/examples/tracing/Cargo.toml
+++ b/examples/tracing/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-opentelemetry = { version = "0.10.0", features = ["tokio"] }
-opentelemetry-application-insights = { version = "0.6.0", features = ["reqwest-client"] }
-reqwest = "0.10.9"
-tokio = { version = "0.2.23", features = ["macros", "process", "rt-core", "time"] }
+opentelemetry = { version = "0.12.0", features = ["tokio-support"] }
+opentelemetry-application-insights = { version = "0.12.0", features = ["reqwest-client"] }
+reqwest = "0.11.2"
+tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
 tracing = "0.1.22"
 tracing-attributes = "0.1.11"
 tracing-futures = "0.2.4"
-tracing-opentelemetry = "0.9.0"
+tracing-opentelemetry = "0.11.0"
 tracing-subscriber = "0.2.15"
