--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,25 +19,24 @@ exclude = [
 ]
 
 [features]
-reqwest-blocking-client = ["reqwest", "reqwest/native-tls", "reqwest/blocking"]
-reqwest-blocking-client-rustls = ["reqwest", "reqwest/rustls-tls", "reqwest/blocking"]
-reqwest-client = ["reqwest", "reqwest/native-tls"]
-reqwest-client-rustls = ["reqwest", "reqwest/rustls-tls"]
-surf-client = ["surf"]
+reqwest-blocking-client = ["reqwest-client"]
+reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
+reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
+reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
+surf-client = ["opentelemetry-http/surf"]
 
 [dependencies]
 async-trait = "0.1"
-bytes = "1"
 chrono = "0.4"
 http = "0.2"
-thiserror = "1"
+once_cell = "1"
 opentelemetry = "0.14"
+opentelemetry-http = "0.3"
 opentelemetry-semantic-conventions = "0.6"
-reqwest = { version = "0.11", optional = true, default-features = false }
+reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-surf = { version = "2", optional = true }
-once_cell = "1"
+thiserror = "1"
 
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
@@ -45,6 +44,7 @@ backtrace = "0.3.56"
 env_logger = "0.8.3"
 opentelemetry = { version = "0.14.0", features = ["rt-tokio"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
+surf = "2"
 test-case = "1.1.0"
 tokio = { version = "1.6.0", features = ["rt", "macros", "process", "time"] }
 version-sync = "0.9.2"
@@ -57,7 +57,7 @@ github = { repository = "frigus02/opentelemetry-application-insights", workflow 
 
 [[example]]
 name = "attributes"
-required-features = ["reqwest-blocking-client"]
+required-features = ["reqwest-client"]
 
 [[example]]
 name = "http_client_reqwest"
@@ -65,7 +65,7 @@ required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
 
 [[example]]
 name = "http_client_reqwest_blocking"
-required-features = ["reqwest-blocking-client"]
+required-features = ["reqwest-client"]
 
 [[example]]
 name = "http_client_surf"
