--- a/examples/tracing/Cargo.toml
+++ b/examples/tracing/Cargo.toml
@@ -5,12 +5,12 @@ authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-opentelemetry = { version = "0.12.0", features = ["tokio-support"] }
-opentelemetry-application-insights = { version = "0.12.0", features = ["reqwest-client"] }
-reqwest = "0.11.2"
-tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
-tracing = "0.1.22"
-tracing-attributes = "0.1.11"
-tracing-futures = "0.2.4"
-tracing-opentelemetry = "0.11.0"
-tracing-subscriber = "0.2.15"
+opentelemetry = { version = "0.14.0", features = ["rt-tokio"] }
+opentelemetry-application-insights = { version = "0.15.0", features = ["reqwest-client"] }
+reqwest = "0.11.3"
+tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
+tracing = "0.1.26"
+tracing-attributes = "0.1.15"
+tracing-futures = "0.2.5"
+tracing-opentelemetry = "0.13.0"
+tracing-subscriber = "0.2.18"
