--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,11 @@ reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
 reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
 reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 surf-client = ["opentelemetry-http/surf"]
+metrics = ["opentelemetry/metrics", "ureq"]
 
 [dependencies]
 async-trait = "0.1"
+bytes = "1"
 chrono = "0.4"
 http = "0.2"
 once_cell = "1"
@@ -37,11 +39,13 @@ reqwest = { version = "0.11", default-features = false, features = ["blocking"],
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1"
+ureq = { version = "2", optional = true }
 
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
 backtrace = "0.3.60"
 env_logger = "0.9.0"
+futures = "0.3.16"
 opentelemetry = { version = "0.16", features = ["rt-tokio"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
 surf = "2.2.0"
@@ -70,6 +74,10 @@ required-features = ["reqwest-client"]
 [[example]]
 name = "http_client_surf"
 required-features = ["surf-client", "opentelemetry/rt-async-std"]
+
+[[example]]
+name = "metrics"
+required-features = ["metrics"]
 
 [[example]]
 name = "opentelemetry"
