--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ backtrace = "0.3.60"
 env_logger = "0.9.0"
 opentelemetry = { version = "0.16", features = ["rt-tokio"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
+rand = "0.8.4"
 surf = "2.2.0"
 test-case = "1.1.0"
 tokio = { version = "1.7.0", features = ["rt", "macros", "process", "time"] }
