--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ rand = "0.8.4"
 surf = "2.2.0"
 test-case = "1.1.0"
 tokio = { version = "1.7.0", features = ["rt", "macros", "process", "time"] }
-version-sync = "0.9.2"
+version-sync = { version = "0.9.2", default-features = false, features = ["html_root_url_updated", "contains_regex"] }
 
 [badges]
 github = { repository = "frigus02/opentelemetry-application-insights", workflow = "CI" }
