--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ ureq = { version = "2", optional = true }
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes"] }
 backtrace = "0.3.60"
+doc-comment = "0.3.3"
 env_logger = "0.9.0"
 opentelemetry = { version = "0.16", features = ["rt-tokio"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
