--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,13 +51,13 @@ backtrace = "0.3.60"
 doc-comment = "0.3.3"
 env_logger = "0.9.0"
 insta = "1.10.0"
-opentelemetry = { version = "0.17", features = ["rt-tokio"] }
+opentelemetry = { version = "0.17", features = ["rt-async-std", "rt-tokio"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
 rand = "0.8.4"
 regex = "1.5.4"
 surf = "2.2.0"
 test-case = "1.1.0"
-tokio = { version = "1.7.0", features = ["rt", "macros", "process", "time"] }
+tokio = { version = "1.7.0", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
 version-sync = { version = "0.9.2", default-features = false, features = ["html_root_url_updated", "contains_regex"] }
 
 [badges]
