Stress test  that emulates the traces that a typical HTTP server with a SQL server dependency would generate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,3 +86,7 @@ required-features = ["metrics"]
 [[example]]
 name = "opentelemetry"
 required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
+
+[[example]]
+name = "stress_test"
+required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
