--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ reqwest-blocking-client = ["reqwest-client"]
 reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
 reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
 reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
-surf-client = ["opentelemetry-http/surf"]
+surf-client = ["opentelemetry-http/surf", "surf"]
 metrics = ["opentelemetry/metrics", "ureq"]
 
 [dependencies]
@@ -35,14 +35,16 @@ async-trait = "0.1"
 bytes = "1"
 chrono = "0.4"
 flate2 = "1"
+futures-util = "0.3"
 http = "0.2"
 once_cell = "1"
 opentelemetry = "0.17"
 opentelemetry-http = "0.6"
 opentelemetry-semantic-conventions = "0.9"
-reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
+reqwest = { version = "0.11", default-features = false, features = ["blocking", "stream"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+surf = { version = "2", default-features = false, optional = true }
 thiserror = "1"
 ureq = { version = "2", optional = true }
 
