--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,16 +25,17 @@ rustdoc-args = ["--cfg", "docsrs"]
 [features]
 reqwest-blocking-client = ["reqwest-client"]
 reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
-reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
-reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
+reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls", "tokio-util"]
+reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls", "tokio-util"]
 surf-client = ["opentelemetry-http/surf", "surf"]
-metrics = ["opentelemetry/metrics", "ureq"]
+metrics = ["opentelemetry/metrics", "flate2", "ureq"]
 
 [dependencies]
+async-compression = { version = "0.3", features = ["futures-io", "gzip"] }
 async-trait = "0.1"
 bytes = "1"
 chrono = "0.4"
-flate2 = "1"
+flate2 = { version = "1", optional = true }
 futures-util = "0.3"
 http = "0.2"
 once_cell = "1"
@@ -46,6 +47,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 surf = { version = "2", default-features = false, optional = true }
 thiserror = "1"
+tokio-util = { version = "0.7", default-features = false, features = ["compat", "io"], optional = true }
 ureq = { version = "2", optional = true }
 
 [dev-dependencies]
