Add feature for statically linked openssl with reqwest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 reqwest-blocking-client = ["reqwest-client"]
 reqwest-blocking-client-rustls = ["reqwest-client-rustls"]
 reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
+reqwest-client-vendored-tls = ["opentelemetry-http/reqwest", "reqwest/native-tls-vendored"]
 reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 surf-client = ["opentelemetry-http/surf"]
 metrics = ["opentelemetry/metrics", "ureq"]
