--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,15 +32,15 @@ surf-client = ["opentelemetry-http/surf"]
 metrics = ["opentelemetry/metrics", "ureq"]
 
 [dependencies]
-async-trait = "0.1"
 bytes = "1"
 chrono = "0.4"
 flate2 = "1"
+futures-util = "0.3"
 http = "0.2"
 once_cell = "1"
-opentelemetry = "0.17"
-opentelemetry-http = "0.6"
-opentelemetry-semantic-conventions = "0.9"
+opentelemetry = "0.18"
+opentelemetry-http = "0.7"
+opentelemetry-semantic-conventions = "0.10"
 reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
