--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,11 +49,11 @@ ureq = { version = "2", optional = true }
 
 [dev-dependencies]
 async-std = { version = "1.10.0", features = ["attributes"] }
-backtrace = "0.3.64"
+async-trait = "0.1.57"
 doc-comment = "0.3.3"
 env_logger = "0.9.0"
 insta = "1.13.0"
-opentelemetry = { version = "0.17", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread"] }
+opentelemetry = { version = "0.18", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client"] }
 rand = "0.8.5"
 regex = "1.5.5"
