--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ opentelemetry-semantic-conventions = "0.10"
 reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_repr = "0.1"
 thiserror = "1"
 ureq = { version = "2", optional = true }
 
