--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ reqwest-client-vendored-tls = ["opentelemetry-http/reqwest", "reqwest/native-tls
 reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 surf-client = ["opentelemetry-http/surf"]
 metrics = ["opentelemetry/metrics"]
-live-metrics = ["futures-util", "sysinfo"]
+live-metrics = ["futures-channel", "futures-util", "sysinfo"]
 
 [dependencies]
 async-trait = "0.1"
@@ -39,6 +39,7 @@ chrono = "0.4"
 flate2 = "1"
 http = "0.2"
 once_cell = "1"
+futures-channel = { version = "0.3", default-features = false, optional = true }
 futures-util = { version = "0.3", default-features = false, optional = true }
 opentelemetry = "0.20"
 opentelemetry-http = "0.9"
