--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,8 @@ reqwest-client = ["opentelemetry-http/reqwest", "reqwest/native-tls"]
 reqwest-client-vendored-tls = ["opentelemetry-http/reqwest", "reqwest/native-tls-vendored"]
 reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 surf-client = ["opentelemetry-http/surf"]
-metrics = ["opentelemetry/metrics"]
-live-metrics = ["futures-channel", "futures-util", "sysinfo"]
+metrics = ["opentelemetry_sdk/metrics"]
+live-metrics = ["futures-util", "sysinfo"]
 
 [dependencies]
 async-trait = "0.1"
@@ -39,11 +39,11 @@ chrono = "0.4"
 flate2 = "1"
 http = "0.2"
 once_cell = "1"
-futures-channel = { version = "0.3", default-features = false, optional = true }
 futures-util = { version = "0.3", default-features = false, optional = true }
-opentelemetry = "0.20"
-opentelemetry-http = "0.9"
-opentelemetry-semantic-conventions = "0.12"
+opentelemetry = "0.21"
+opentelemetry_sdk = "0.21"
+opentelemetry-http = "0.10"
+opentelemetry-semantic-conventions = "0.13"
 reqwest = { version = "0.11", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -56,7 +56,7 @@ async-std = { version = "1.10.0", features = ["attributes"] }
 doc-comment = "0.3.3"
 env_logger = "0.10.0"
 insta = "1.13.0"
-opentelemetry = { version = "0.20", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread"] }
+opentelemetry_sdk = { version = "0.21", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread"] }
 opentelemetry-application-insights = { path = ".", features = ["reqwest-client", "reqwest-blocking-client", "live-metrics"] }
 rand = "0.8.5"
 regex = "1.5.5"
@@ -74,7 +74,7 @@ required-features = ["reqwest-client"]
 
 [[example]]
 name = "http_client_reqwest"
-required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
+required-features = ["reqwest-client", "opentelemetry_sdk/rt-tokio"]
 
 [[example]]
 name = "http_client_reqwest_blocking"
@@ -82,7 +82,7 @@ required-features = ["reqwest-client"]
 
 [[example]]
 name = "http_client_surf"
-required-features = ["surf-client", "opentelemetry/rt-async-std"]
+required-features = ["surf-client", "opentelemetry_sdk/rt-async-std"]
 
 [[example]]
 name = "live_metrics"
@@ -94,8 +94,8 @@ required-features = ["metrics"]
 
 [[example]]
 name = "opentelemetry"
-required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
+required-features = ["reqwest-client", "opentelemetry_sdk/rt-tokio"]
 
 [[example]]
 name = "stress_test"
-required-features = ["reqwest-client", "opentelemetry/rt-tokio"]
+required-features = ["reqwest-client", "opentelemetry_sdk/rt-tokio"]
