--- a/examples/tracing/Cargo.toml
+++ b/examples/tracing/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2018"
 
 [dependencies]
 opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
-opentelemetry-application-insights = { version = "0.27.0", features = ["reqwest-client"] }
+opentelemetry-http = { version = "0.9.0", features = ["reqwest"] }
+opentelemetry-application-insights = { version = "0.27.0" }
 reqwest = "0.11"
 tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time"] }
 tracing = "0.1.37"
