--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ futures-util = { version = "0.3", default-features = false, optional = true }
 opentelemetry = "0.26"
 opentelemetry_sdk = "0.26"
 opentelemetry-http = "0.26"
-opentelemetry-semantic-conventions = "0.26"
+opentelemetry-semantic-conventions = { version = "0.26", features = ["semconv_experimental"] }
 reqwest = { version = "0.12", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
