--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,19 +42,19 @@ async-trait = "0.1"
 bytes = "1"
 chrono = "0.4"
 flate2 = "1"
+futures-util = { version = "0.3", default-features = false, optional = true }
 http = "1"
 once_cell = "1"
-futures-util = { version = "0.3", default-features = false, optional = true }
-opentelemetry = "0.26"
-opentelemetry_sdk = "0.26"
-opentelemetry-http = "0.26"
-opentelemetry-semantic-conventions = { version = "0.26", features = ["semconv_experimental"] }
+opentelemetry = "0.27"
+opentelemetry-http = "0.27"
+opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
+opentelemetry_sdk = "0.27"
 reqwest = { version = "0.12", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_repr = "0.1"
-thiserror = "1"
 sysinfo = { version = "0.30", optional = true }
+thiserror = "1"
 
 [dev-dependencies]
 async-std = { version = "1.13.0", features = ["attributes"] }
@@ -62,9 +62,9 @@ doc-comment = "0.3.3"
 env_logger = "0.11.3"
 insta = "1.39.0"
 log = { version = "0.4", features = ["kv", "kv_sval"] }
-opentelemetry_sdk = { version = "0.26", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread", "logs_level_enabled"] }
-opentelemetry-http = { version = "0.26", features = ["reqwest"] }
-opentelemetry-appender-log = { version = "0.26", features = ["with-serde"] }
+opentelemetry_sdk = { version = "0.27", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread", "spec_unstable_logs_enabled"] }
+opentelemetry-http = { version = "0.27", features = ["reqwest"] }
+opentelemetry-appender-log = { version = "0.27", features = ["with-serde"] }
 rand = "0.8.5"
 regex = "1.10.5"
 reqwest = { version = "0.12", features = ["blocking"] }
