--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ trace = ["opentelemetry_sdk/trace"]
 metrics = ["opentelemetry_sdk/metrics"]
 logs = ["opentelemetry_sdk/logs"]
 live-metrics = ["trace", "futures-util", "sysinfo"]
+internal-logs = ["tracing"]
 # Deprecated features: These don't enable anything in
 # opentelemetry-application-insights. They only enable features in dependency
 # crates.
@@ -55,6 +56,7 @@ serde_json = "1"
 serde_repr = "0.1"
 sysinfo = { version = "0.30", optional = true }
 thiserror = "2"
+tracing = { version = ">=0.1.40", default-features = false, optional = true }
 
 [dev-dependencies]
 async-std = { version = "1.13.0", features = ["attributes"] }
