--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,10 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = ["trace", "metrics", "logs"]
-trace = ["opentelemetry_sdk/trace", "opentelemetry_sdk/experimental_trace_batch_span_processor_with_async_runtime"]
+trace = ["opentelemetry_sdk/trace"]
 metrics = ["opentelemetry_sdk/metrics"]
 logs = ["opentelemetry_sdk/logs"]
-live-metrics = ["trace", "futures-util", "sysinfo"]
+live-metrics = ["trace", "futures-util", "sysinfo", "opentelemetry_sdk/experimental_trace_batch_span_processor_with_async_runtime"]
 internal-logs = ["tracing"]
 # Deprecated features: These don't enable anything in
 # opentelemetry-application-insights. They only enable features in dependency
@@ -46,10 +46,10 @@ flate2 = "1"
 futures-util = { version = "0.3", default-features = false, optional = true }
 http = "1"
 once_cell = "1"
-opentelemetry = "0.28"
-opentelemetry-http = "0.28"
-opentelemetry-semantic-conventions = { version = "0.28", features = ["semconv_experimental"] }
-opentelemetry_sdk = "0.28"
+opentelemetry = "0.29"
+opentelemetry-http = "0.29"
+opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"] }
+opentelemetry_sdk = "0.29"
 reqwest = { version = "0.12", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -59,14 +59,13 @@ thiserror = "2"
 tracing = { version = ">=0.1.40", default-features = false, optional = true }
 
 [dev-dependencies]
-async-std = { version = "1.13.0", features = ["attributes"] }
 doc-comment = "0.3.3"
 env_logger = "0.11.3"
 insta = "1.39.0"
 log = { version = "0.4", features = ["kv", "kv_sval"] }
-opentelemetry_sdk = { version = "0.28", features = ["rt-async-std", "rt-tokio", "rt-tokio-current-thread", "spec_unstable_logs_enabled"] }
-opentelemetry-http = { version = "0.28", features = ["reqwest"] }
-opentelemetry-appender-log = { version = "0.28", features = ["with-serde"] }
+opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "rt-tokio-current-thread", "spec_unstable_logs_enabled"] }
+opentelemetry-http = { version = "0.29", features = ["reqwest"] }
+opentelemetry-appender-log = { version = "0.29", features = ["with-serde"] }
 rand = "0.8.5"
 regex = "1.10.5"
 reqwest = { version = "0.12", features = ["blocking"] }
