--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,10 @@ flate2 = "1"
 futures-util = { version = "0.3", default-features = false, optional = true }
 http = "1"
 once_cell = "1"
-opentelemetry = "0.29"
-opentelemetry-http = "0.29"
-opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"] }
-opentelemetry_sdk = "0.29"
+opentelemetry = "0.30"
+opentelemetry-http = "0.30"
+opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
+opentelemetry_sdk = "0.30"
 reqwest = { version = "0.12", default-features = false, features = ["blocking"], optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -63,9 +63,9 @@ doc-comment = "0.3.3"
 env_logger = "0.11.3"
 insta = "1.39.0"
 log = { version = "0.4", features = ["kv", "kv_sval"] }
-opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "rt-tokio-current-thread", "spec_unstable_logs_enabled"] }
-opentelemetry-http = { version = "0.29", features = ["reqwest"] }
-opentelemetry-appender-log = { version = "0.29", features = ["with-serde"] }
+opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "rt-tokio-current-thread", "spec_unstable_logs_enabled", "experimental_trace_batch_span_processor_with_async_runtime"] }
+opentelemetry-http = { version = "0.30", features = ["reqwest"] }
+opentelemetry-appender-log = { version = "0.30", features = ["with-serde"] }
 rand = "0.8.5"
 regex = "1.10.5"
 reqwest = { version = "0.12", features = ["blocking"] }
