--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 
 [dependencies]
 async-trait = "0.1"
+backon = "1.5.1"
 bytes = "1"
 chrono = "0.4"
 flate2 = "1"
