feat: implement retries (#103)
Azure Application Insights frequently times out, returns HTTP 503
errors, or only accepts partial payloads. This adds transparent retries.
Users of this crate won't have to configure anything.

Using `backon` crate, because it seems small and easy to use.

Design decisions:

- Don't expose implementation. Add default retries that should work for
  everyone:

  - min_delay = 500ms
  - max_delay = 5s
  - with jitter (to avoid thundering herds when multiple exports run in parallel)

  We wanted no max_times or total delay, because the BatchSpanProcessor
  already provides a `max_export_timeout` option. This automatically
  ensures that the exporter will stop. However, it's only available in the
  experimental async version of the BatchSpanProcessor. And it's missing
  in the SimpleSpanProcessor and metric and logs processors. Therefore
  this sets a total delay of 35s.

- Add a `with_retry_notify` option. Can be used to log retries and
  thereby debug exporter flakyness.

- Use `futures-timer` crate to provide sleep functionality during
  retries. Ideally we could use
  opentelemetry_sdk::runtime::Runtime::delay for that. But that's behind
  an experimental feature and we the SDK doesn't provide the exporters
  with a runtime. We'd have to add a configuration to the exporter where
  users would need to specify their choosen runtime, which then has to
  fit to the rest of their setup, otherwise they see runtime errors.

  E.g. tokio-sleep fails if not executed in the context of a Tokio
  reactor with:

      there is no reactor running, must be called from the context of a Tokio 1.x runtime

  This error would also only happen if a retry has to happen, which
  means when a call to AppInsights fails. This would make it very hard
  to debug.

  We're using futures-timer instead, which works with all runtimes,
  including tokio and futures-executor. The OpenTelemetry SDK uses the
  latter for most default processors right now.

---------

Co-

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ reqwest-client-rustls = ["opentelemetry-http/reqwest", "reqwest/rustls-tls"]
 
 [dependencies]
 async-trait = "0.1"
+backon = { version = "1.5", default-features = false, features = ["futures-timer-sleep"] }
 bytes = "1"
 chrono = "0.4"
 flate2 = "1"
