--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,12 @@ jobs:
           tool: cargo-check-external-types@0.2.0
       - name: Run cargo check-external-types
         run: cargo check-external-types --all-features
+  check_msrv:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@cargo-hack
+      - name: Run cargo check-external-types
+        run: cargo hack check --rust-version --workspace --all-targets --ignore-private
