lib only, no tests etc

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,4 @@ jobs:
         with:
           tool: cargo-hack
       - name: Run cargo hack --rust-version
-        run: cargo hack check --rust-version --workspace --all-targets --ignore-private
+        run: cargo hack check --rust-version --lib
